<resources>
    <string name="app_name">QingProjectOffline</string>
    <string name="text_group_chat_setting">群设置</string>
    <string name="text_check_all_chat_members">查看全部群成员</string>
    <string name="text_chat_group_name">群名称</string>
    <string name="text_chat_information">重要资讯</string>
    <string name="text_my_nick_in_this_group">我在本群的昵称</string>
    <string name="text_sticky_posts">置顶聊天</string>
    <string name="text_message_not_interrupted">消息免打扰</string>
    <string name="text_dl_config_exit_group_chat">确认退出并删除群聊吗？</string>
    <string name="text_dl_config_delete_members">确定要删除所选中的群成员？</string>
    <string name="text_search_chat_member_result_member_non_exit">该用户不存在</string>
    <string name="search_via_phone">通过手机号搜索</string>
    <string name="text_add">添加</string>
    <string name="text_add_success">添加成功！</string>
    <string name="text_deleted">已删除</string>
    <string name="text_hint_search_nick_or_real_name">输入老师实名或昵称</string>
    <string name="text_hint_search_nick">输入老师昵称</string>
    <string name="text_group_members">群成员</string>
    <string name="text_cancel">取消</string>
    <string name="text_edit_group_chat_name_input">请输入14个字以内中文、英文或数字。</string>
    <string name="text_create_new">新建</string>
    <string name="text_counts_exceeding_limits">字数超过上限！</string>
    <string name="text_copied_to_clipboard">文字已复制到剪切板！</string>
    <string name="text_hint_input_announcement">请输入群公告</string>
    <string name="text_group_chat_announce_title">群公告</string>
    <string name="text_group_chat_announce_value_empty">无</string>
    <string name="text_average_course_time_of_this_group">群平均课时数</string>
    <string name="text_exit_current_edit">退出本次编辑？</string>
    <string name="text_confirm_publish_announce">该公告会通知全部成员，是否发布？</string>
    <string name="text_proceed_edit">继续编辑</string>
    <string name="text_exit">退出</string>
    <string name="text_publish">发布</string>
    <string name="text_successfully_published">已发布</string>
    <string name="text_unset">未设置</string>
    <string name="text_message_title_preview_student">%s 给您布置的课前预习</string>
    <string name="text_message_title_review_student">%s 给您布置的课后作业</string>
    <string name="text_message_title_preview_teacher">您布置的课前预习</string>
    <string name="text_message_title_review_teacher">您布置的课后作业</string>
    <string name="text_message_title_review_preview_teacher">您布置的内容</string>
    <string name="text_grade_course_preview">%s预习</string>
    <string name="text_grade_course_review">%s课后作业</string>
    <string name="title_preview_detail_student">预习详情</string>
    <string name="title_review_detail_student">作业详情</string>
    <string name="title_preview_detail_teacher">查看预习详情</string>
    <string name="title_review_detail_teacher">查看作业详情</string>
    <string name="title_review_detail_with_answer_teacher">查看课后作业</string>
    <string name="title_preview_detail_with_answer_teacher">查看预习作业</string>
    <string name="text_see_tiku_student">老师给您布置了在线练习，快去完成吧</string>
    <string name="text_see_tiku_teacher_preview">请电脑访问www.changingedu.com\n在我是老师>布置预习中，查看学生答题情况</string>
    <string name="text_see_tiku_teacher_review">请电脑访问www.changingedu.com\n在我是老师>布置作业中，查看学生答题情况</string>
    <string name="text_see_now">检查作业</string>
    <string name="text_answer_complete_time">完成时间：%s</string>
    <string name="text_homework_create_time">布置时间：%s</string>
    <string name="text_homework_upload_time">提交时间：%s</string>
    <string name="text_see_my_homework_preview">查看我上传的预习作业</string>
    <string name="text_see_my_homework_review">查看我上传的课后作业</string>
    <string name="text_see_preview_tiku_only_student">去查看老师布置的在线题库预习</string>
    <string name="text_see_review_tiku_only_student">去查看老师布置的在线题库作业</string>
    <string name="text_see_preview_tiku_only_teacher">去查看您布置的在线题库预习</string>
    <string name="text_see_review_tiku_only_teacher">去查看您布置的在线题库作业</string>
    <string name="text_see_preview_prep_offline_student">老师已布置线下预习</string>
    <string name="text_see_review_prep_offline_student">老师已布置线下作业</string>
    <string name="text_see_preview_prep_offline_teacher">您已布置线下预习</string>
    <string name="text_see_review_prep_offline_teacher">您已布置线下作业</string>
    <string name="title_homework_answer_detail_activity_student">我的作业</string>
    <string name="title_homework_answer_detail_activity_teacher">查看答案</string>
    <string name="title_homework_answer_detail">%s 作业详情</string>
    <string name="title_create_preview">布置预习</string>
    <string name="title_create_review">布置作业</string>
    <string name="title_upload_homework">上传作业</string>
    <string name="text_create_audio_preview_teacher">语音布置预习</string>
    <string name="text_create_audio_review_teacher">语音布置作业</string>
    <string name="text_create_audio_preparation_student">录制语音作业</string>
    <string name="text_re_record">重录</string>
    <string name="hint_preview_teacher"><DATA><![CDATA[<small>若有文字形式的预习内容，请在此输入。</small>]]></DATA></string>
    <string name="hint_review_teacher"><DATA><![CDATA[<small>若有文字形式的作业内容，请在此输入。</small>]]></DATA></string>
    <string name="hint_homework_new">本次课将要教授的知识点：\n孩子需要提前准备的内容：\n语音内容提示</string>
    <string name="hint_preview_review_student"><DATA><![CDATA[<small>请文字输入作业内容</small>]]></DATA></string>
    <string name="text_add_preparation_photo">添加预习作业照片</string>
    <string name="text_tiku">题库</string>
    <string name="text_see">查看</string>
    <string name="text_add_tiku">扫一扫添加题库</string>
    <string name="text_send_to_parent">发送给家长</string>
    <string name="text_send_to_teacher">上传</string>
    <string name="text_send_to_teacher_can_add_score">上传得%1$d轻豆</string>
    <string name="text_send_to_teacher_can_add_score_privilege"><DATA><![CDATA[上传得%1$d轻豆<small>(会员加速)</small>]]></DATA></string>
    <string name="text_has_create_offline">线下已布置</string>
    <string name="text_no_need_create">不需要布置</string>
    <string name="text_capture_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="text_alert_ignore_homework">\n本节课不需要布置作业了吗？\n确定后将发送给家长哦\n</string>
    <string name="text_alert_ignore_preview">\n本节课不需要布置预习了吗？\n确定后将发送给家长哦\n</string>
    <string name="text_alert_offline_homework">\n本节课线下已经布置了作业吗？\n确定后将发送给家长哦\n</string>
    <string name="text_alert_offline_preview">\n本节课线下已经布置了预习吗？\n确定后将发送给家长哦\n</string>
    <string name="text_alert_delete_audio"><DATA><![CDATA[
        确定要<font color="#000000">删除语音</font>吗？
    ]]></DATA></string>
    <string name="text_alert_confirm_delete">确定要删除吗？</string>
    <string name="text_dlg_upload_homework_complete_has_award">感谢填写，课时费%s元已解冻</string>
    <string name="text_dlg_upload_homework_complete_no_award">感谢填写</string>
    <string name="text_upload_homework_answer_complete">提交成功\n老师会尽快批改您的作业</string>
    <string name="text_create_homework_tip_has_award"><DATA><![CDATA[
        将<font color="#DB2440">解冻%s元课时费！</font>
    ]]></DATA></string>
    <string name="text_create_homework_tip_no_award">孩子能更好的接受哦~</string>
    <string name="text_dlg_create_homework">\n检查无误了吗？\n提交后不能修改了哦\n </string>
    <string name="text_dlg_homework_too_short_warning">\n内容有点少哦，\n确认发送吗？</string>
    <string name="capture_2d_code">扫描二维码</string>
    <string name="text_give_course_address">地址：%s</string>
    <string name="text_no_student_complete">暂无学生完成哦~</string>
    <string name="text_fuwuhao_tuijian">服务号推荐</string>
    <string name="text_add_tiku_new">添加题库</string>
    <string name="text_tiku_info">题库说明</string>
    <string name="text_capture_info">将二维码/条码放入框内，即可自动扫描</string>
    <string name="text_has_completed_homework">做完了</string>
    <string name="text_has_completed_homework_can_add_score">完成作业+%1$d轻豆</string>
    <string name="text_has_completed_homework_can_add_score_privilege"><DATA><![CDATA[完成作业+%1$d轻豆 <small>(会员加速)</small>]]></DATA></string>
    <string name="text_has_completed_preview_can_add_score">完成预习+%1$d轻豆</string>
    <string name="text_has_completed_preview_can_add_score_privilege"><DATA><![CDATA[完成预习+%1$d轻豆 <small>(会员加速)</small>]]></DATA></string>
    <string name="text_upload_homework">上传作业给老师批改</string>
    <string name="text_upload_homework_can_add_score">上传作业给老师批改+%1$d轻豆</string>
    <string name="text_upload_homework_can_add_score_privilege"><DATA><![CDATA[上传作业给老师批改+%1$d轻豆 <small>(会员加速)</small>]]></DATA></string>
    <string name="text_is_out_of_date">已过期</string>
    <string name="text_no_need_homework">该课程老师未布置作业</string>
    <string name="text_no_need_preview">该课程老师未布置预习</string>
    <string name="groupon_order_detail">朋友团详情</string>
    <string name="groupon_remark">朋友团备注</string>
    <string name="groupon_detail_share">还差%d人成团 去邀请好友</string>
    <string name="groupon_detail_share_default">邀请好友付款</string>
    <string name="groupon_detail_join_group">我要参团</string>
    <string name="groupon_detail_share_to_student">还差%d人成团 去邀请家长</string>
    <string name="groupon_detail_share_default_to_student">邀请家长参团</string>
    <string name="groupon_detail_course_address">上课地点</string>
    <string name="groupon_detail_total_course_count_fold">共计%d次课，查看全部</string>
    <string name="groupon_detail_total_course_count_unfold">共计%d次课，收起详情</string>
    <string name="groupon_detail_member_count_down"><Data><![CDATA[还差<font color="#FF7700">%d</font>人，就能开团啦]]></Data></string>
    <string name="groupon_detail_chief_member_title">团长&#058;&#032;%s</string>
    <string name="groupon_detail_chief_join_time">开团时间&#058;&#032;%s</string>
    <string name="groupon_detail_join_time">参团时间&#058;&#032;%s</string>
    <string name="groupon_success">组团成功</string>
    <string name="groupon_failed">组团失败</string>
    <string name="groupon_create_one">重新开团</string>
    <string name="groupon_chief_title">团长</string>
    <string name="two_group">二人团</string>
    <string name="three_group">三人团</string>
    <string name="four_group">四人团</string>
    <string name="five_group">五人团</string>
    <string name="audition_course_text">试听课</string>
    <string name="normal_course_text">正式课</string>
    <string name="groupon_share_title">%1$s邀请您一起参加%2$s的团课。</string>
    <string name="groupon_share_content">%1$s%2$s，第一次课程时间：%3$s。</string>
    <string name="groupon_help_to_pay">帮朋友代付</string>
    <string name="title_order_renew">续课</string>
    <string name="title_order_new">预约课程</string>
    <string name="title_order_confirm">确认订单</string>
    <string name="text_order_class_start_time">上课开始时间</string>
    <string name="text_no_time_blocks">当前没有可选择的时间段</string>
    <string name="text_select_time_busy_title">时段繁忙</string>
    <string name="text_select_time_busy_ind">老师设置该时段繁忙，您是否接受和老师协调其他时间？</string>
    <string name="text_select_time_busy">接受</string>
    <string name="text_select_another_time_when_busy">重新选择</string>
    <string name="text_order_time_list">课程时间</string>
    <string name="text_order_time_conflict">时间冲突</string>
    <string name="text_order_time_select">请选择上课时间</string>
    <string name="text_order_time_conflict_toast">选择的时间有冲突</string>
    <string name="text_select_course_date">上课日期</string>
    <string name="text_order_continue_renew">继续下单</string>
    <string name="title_group_members">确定朋友团成员</string>
    <string name="text_confirm_group_members_tip">替其他家长付款，直接开团成功</string>
    <string name="text_confirm_group_members">下一步</string>
    <string name="text_group_members_changed">团员变了？点击此处</string>
    <string name="text_order_course_buy_count">购买课次</string>
    <string name="text_order_course_count_tip">早预定早安心，课程可能会涨价</string>
    <string name="text_order_course_sel_length">每次课时长</string>
    <string name="text_order_course_time_length_tip">选择单次课上课时长</string>
    <string name="text_order_total_amount">总额：</string>
    <string name="text_next_step">下一步</string>
    <string name="text_order_course_unit_price">课程单价</string>
    <string name="text_order_course_alter_price_tip">改价说明</string>
    <string name="text_order_course_third_site_price">@string/site_type_third_home</string>
    <string name="text_order_course_count">课次课时</string>
    <string name="text_order_course_total_hours">总课时数</string>
</resources>