<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/ll_root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

    >


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <LinearLayout
            android:id="@+id/ll_scrollview_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:overScrollMode="never"
                android:padding="@dimen/dimen_5"
                android:scrollbars="none"
                >
            </android.support.v7.widget.RecyclerView>


            <FrameLayout
                android:id="@+id/fl_checkout_group_members_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dimen_12"
                >

                <TextView
                    android:id="@+id/tv_check_all_members"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableRight="?attr/settingRightArrow"
                    android:text="@string/text_check_all_chat_members"
                    />

            </FrameLayout>


            <com.qingqing.base.view.setting.SimpleSettingItem
                android:id="@+id/ssi_group_chat_name"
                style="@style/MyProfileSettingItemStyle"
                android:layout_marginTop="@dimen/dimen_12"
                app:hasSettingAction="false"
                app:showUnderLine="true"
                app:titleString="@string/text_chat_group_name"
                />

            <com.qingqing.base.view.setting.SimpleSettingItem
                android:id="@+id/ssi_group_information"
                style="@style/MyProfileSettingItemStyle"
                app:hasSettingAction="false"
                app:showUnderLine="true"
                app:titleString="@string/text_chat_information"
                app:emptyHolder="@string/text_unset"
                android:visibility="gone"
                tools:visibility="visible"
                />


            <LinearLayout
                android:id="@+id/ll_group_announce_entrance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dimen_12"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_group_announce_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_group_chat_announce_title"
                        />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical|right"
                        >

                        <TextView
                            android:id="@+id/tv_group_announce_empty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|end"
                            android:text="@string/text_group_chat_announce_value_empty"
                            android:textColor="@color/black"
                            android:visibility="gone"
                            tools:visibility="visible"
                            android:layout_marginRight="@dimen/dimen_6"
                            />

                        <ImageView
                            android:id="@+id/iv_add_announcement_for_admin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="?attr/settingRightArrow"
                            android:visibility="gone"
                            tools:visibility="visible"
                           android:layout_gravity="center_vertical"
                            />


                    </LinearLayout>


                </FrameLayout>

                <LinearLayout
                    android:id="@+id/ll_group_chat_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_12"
                    android:visibility="gone"
                    tools:visibility="visible"
                    >

                    <TextView
                        android:id="@+id/tv_group_chat_announce_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:textColor="@color/black"
                        tools:text="【重要通知】作为国内最大的上门家教服务机构，轻轻家教一直致力于打造优质的教学与服务标准，为孩子提供更加亲密、透明、高效的辅导体验。为加强平台老师的教学常规管理工作，提高教学服务质量，提升家长满意度，我们正在强力升级上海轻轻老师教研中心，逐步打造行业顶尖的轻轻教研团队,期待这是一次轻轻与您共同的跨越！详情猛戳：https://qingjy.cn/zrDex"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="?attr/settingRightArrow"
                        android:layout_marginLeft="@dimen/dimen_6"
                        />
                </LinearLayout>
            </LinearLayout>

            <com.qingqing.base.view.setting.SimpleSettingItem
                android:id="@+id/ssi_group_chat_my_nick"
                style="@style/MyProfileSettingItemStyle"
                android:layout_marginTop="@dimen/dimen_12"
                app:hasSettingAction="false"
                app:showUnderLine="true"
                app:titleString="@string/text_my_nick_in_this_group"
                />

            <com.qingqing.base.view.setting.SimpleSettingItem
                android:id="@+id/ssi_group_chat_average_time"
                style="@style/MyProfileSettingItemStyle"
                app:hasSettingAction="false"
                app:showUnderLine="false"
                app:titleString="@string/text_average_course_time_of_this_group"
                android:visibility="gone"
                tools:visibility="visible"
                />

            <com.qingqing.base.view.setting.SettingToggleValueItem
                android:id="@+id/ssi_pin_chat"
                style="@style/MyProfileSettingItemStyle"
                app:hasSettingAction="false"
                app:showUnderLine="true"
                app:titleString="置顶聊天"
                android:layout_marginTop="@dimen/dimen_12"
                />

            <com.qingqing.base.view.setting.SettingToggleValueItem
                android:id="@+id/ss_chat_no_interrupt"
                style="@style/MyProfileSettingItemStyle"
                android:layout_marginBottom="@dimen/dimen_35"
                app:hasSettingAction="false"
                app:showUnderLine="false"
                app:titleString="消息免打扰"
                />


            <TextView
                android:id="@+id/tv_exit_group_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:background="@drawable/shape_big_corner_rect_accent_red_solid"
                android:gravity="center"
                android:padding="@dimen/dimen_12"
                android:text="@string/im_logout_and_delete_group"
                android:textColor="@color/white"
                />

        </LinearLayout>


    </ScrollView>


</LinearLayout>